# project-elrond-helper

./: .gitignore  1_crawl.py  2_aggregate.py  3_upload_supabase.py  4_setup_image_list.py  5_crawl_and_upload.py  6_validate_downloaded.py  7_validate_uploaded.py  8_check_locid.py  9_validate_locid.py  circle_type.py  locid.json  locid.lst  locid_rev.json  main.py  pyproject.toml
dict/: image_list.json
